fixed map ul dot scrollbar bug

--- a/css/style.css
+++ b/css/style.css
@@ -3143,7 +3143,7 @@ display: inline-block; width: 60%;
     display: inline-block;
     position: relative;
     width: 100%;
-    height: 400px;
+    height: 430px;
     float: right;
     padding: 7%;
    }
@@ -3157,7 +3157,7 @@ display: inline-block; width: 60%;
     bottom: 52vh;
     left: 6%;
     display: block;
-    width: 100%;
+    width: 90%;
     padding: 0;
     margin: 0;
     list-style: none;
